--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -117,6 +117,7 @@ header .buscador .input{
 .articulo .main-article{
     width: 100%;
     padding: 15px;
+    background-color: #FFFFFF;
 }
 
 .lista-articulos{
@@ -347,7 +348,7 @@ h4{
     footer .icono:hover i{
         color:#39b54a
     }
-    
+
 }
 
 @media(min-width:904px){
